--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -2,6 +2,21 @@ html,
 body {
     height: 100%;
 }
+.img-wrapper{
+    height: 400px;
+    flex-direction: column;
+    justify-content: center;
+    display: flex;
+    padding: 5px ;
+}
+
+.img-wrapper img{
+    width: auto;
+    max-width: 100%;
+    max-height: 100%;
+    margin: 0 auto;
+    display: block;
+}
 
 .wrap {
     min-height: 100%;
